gitops/java/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: argocd-java-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: petclinic
  namespace: argocd-java-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petclinic
    deploymentconfig: petclinic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
