gitops/java/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: argocd-java-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: petclinic
  namespace: argocd-java-demo
spec:
  host: argocd-java-demo.apps-crc.testing
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: petclinic
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: argocd-java-demo.apps-crc.testing
    routerCanonicalHostname: apps-crc.testing
    routerName: default
    wildcardPolicy: None
